# vaas-server

./: .env  Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: rust.yml
deploy/: Dockerfile
migrations/: 20200813191421_initial.sql
resources/: 1_init.sql  2_sample_data.sql  sample_data.sql
src/: lib.rs  log.rs  main.rs  server.rs  service.rs  span.rs  websocket.rs
src/db/: alternative.rs  issue.rs  mod.rs  session.rs  user.rs  vote.rs
src/managers/: alternative.rs  mod.rs  session.rs  user.rs  vote.rs
src/services/: broadcast.rs  client.rs  issue.rs  mod.rs  session.rs  user.rs  vote.rs
tests/: integration_test.rs
tests/integration_db/: mod.rs
tests/snapshots/: integration_test__connect.snap  integration_test__login_user.snap  integration_test__reconnect - initial login.snap
