[package]
name = "vaas-server"
version = "0.1.0"
authors = ["Christian Duvholt <christian@duvholt.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
futures = "0.3.5"
serde = "1.0"
serde_json = "1.0"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.5.0"
uuid = { version = "0.8.1", features = ["v4"] }
tokio = "0.2.20"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"
actix-interop = "0.1.1"


[dev-dependencies]
insta = { version = "0.16.0", features = ["ron", "redactions"] }
actix-http = "1.0.1"
actix-codec = "0.2.0"
