[package]
name = "vaas-server"
version = "0.1.0"
authors = ["Christian Duvholt <christian@duvholt.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
futures = "0.3.5"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
tokio = "0.2.20"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"
actix-interop = "0.1.1"
pin-project = "0.4.17"
sqlx = {  git = "https://github.com/launchbadge/sqlx", branch = "master", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }
dotenv = "0.15.0"
color-eyre = "0.5.0"
tracing-error = "0.1.2"
async-trait = "0.1.36"


[dev-dependencies]
insta = { version = "0.16.0", features = ["ron", "redactions"] }
actix-http = "1.0.1"
actix-codec = "0.2.0"
